--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>web</module>
         <module>zuul</module>
         <module>config</module>
+        <module>common</module>
     </modules>
 
     <build>
