--- a/web/src/main/resources/bootstrap.yml
+++ b/web/src/main/resources/bootstrap.yml
@@ -23,9 +23,9 @@ spring:
         # 配置中心服务的id
         service-id: config-service
       # 那个文件夹，config模块resources/config下的那个文件夹
-      label: test
+      label: dev
       # 读取后缀名称
-      profile: test
+      profile: dev
       # 配置文件名称
       name: config
       # fail-fast 如果访问配置中心失败，则停止启动服务
